--- a/fitness-tracker-frontend/projects/plans-lib/src/lib/views/plans-overview/plans-overview.html
+++ b/fitness-tracker-frontend/projects/plans-lib/src/lib/views/plans-overview/plans-overview.html
@@ -1,7 +1,7 @@
 <section class="plans-overview page-container">
     <header class="overview-header">
         <div class="header-content">
-            <h1>Training Plans</h1>
+            <h1>Plans</h1>
             <p class="subtitle">Organize your training plans</p>
         </div>
 
