feat(workouts): implement search, ui improvements and start button update

--- a/fitness-tracker-frontend/projects/workouts-lib/src/lib/views/workout-detail/workout-detail.html
+++ b/fitness-tracker-frontend/projects/workouts-lib/src/lib/views/workout-detail/workout-detail.html
@@ -14,7 +14,7 @@
         @if (log.status === 'InProgress') {
         <div class="header-actions">
           <button mat-raised-button class="continue-btn" type="button" (click)="onEdit()">
-            <mat-icon>play_arrow</mat-icon>
+            <mat-icon>edit</mat-icon>
             Edit
           </button>
         </div>
